Use the latest official github release for bump deployments
[#150608972]

Signed-off-by: Genevieve LEsperance <glesperance@pivotal.io>

--- a/pipelines/bosh-deployment.yml
+++ b/pipelines/bosh-deployment.yml
@@ -66,6 +66,7 @@ jobs:
     - get: ci
       resource: infrastructure-ci
     - get: bosh-bootloader
+    - get: bbl-release
     - get: bosh-deployment
       trigger: true
     - get: jumpbox-deployment
