--- a/scripts/bosh-deployment/bump-deployments/task.yml
+++ b/scripts/bosh-deployment/bump-deployments/task.yml
@@ -9,6 +9,7 @@ image_resource:
 inputs:
 - name: ci
 - name: bosh-bootloader
+- name: bbl-release
 - name: bosh-deployment
 - name: jumpbox-deployment
 
