--- a/pipelines/bosh-deployment.yml
+++ b/pipelines/bosh-deployment.yml
@@ -60,6 +60,8 @@ resources:
 
 jobs:
 - name: bump-deployments
+  serial: true
+  serial_groups: [aws,gcp]
   public: true
   plan:
   - aggregate:
@@ -80,7 +82,8 @@ jobs:
       force: true
 
 - name: test-bosh-bootloader
-  public: true
+  serial: true
+  serial_groups: [aws,gcp]
   plan:
   - aggregate:
     - get: ci
@@ -94,7 +97,7 @@ jobs:
 
 - name: aws-acceptance-tests
   serial: true
-  public: true
+  serial_groups: [aws]
   plan:
   - aggregate:
     - get: bosh-bootloader
@@ -114,7 +117,7 @@ jobs:
 
 - name: gcp-acceptance-tests
   serial: true
-  public: true
+  serial_groups: [gcp]
   plan:
   - aggregate:
     - get: bosh-bootloader
@@ -134,6 +137,8 @@ jobs:
       BBL_TEST_ENV_ID_PREFIX: bump-deployments
 
 - name: commit-bump-deployments-change
+  serial: true
+  serial_groups: [aws,gcp]
   public: true
   plan:
   - aggregate:
@@ -150,6 +155,8 @@ jobs:
       repository: bosh-bootloader
 
 - name: github-release
+  serial: true
+  serial_groups: [aws,gcp]
   public: true
   plan:
   - aggregate:
