Add tags to windows worker for better visibility
In error outputs when there are no workers available,
it is confusing because it shows windows workers for
other teams. This should help us be able to distinguish
our worker from other teams' workers.

[#150644882]

Signed-off-by: Dave McClure <dmcclure@pivotal.io>

--- a/scripts/infrastructure-ci/deploy-concourse-windows-worker/fixtures/windows-worker.yml
+++ b/scripts/infrastructure-ci/deploy-concourse-windows-worker/fixtures/windows-worker.yml
@@ -25,6 +25,9 @@ instance_groups:
   - 50GB_ephemeral_disk
   properties:
     concourse_windows:
+      tags:
+      - cf-infrastructure
+      - consul
       team: ((concourse_team))
       tsa_host: ((tsa_host))
       tsa_public_key: ((tsa_public_key))
